# ml-quant

./: .editorconfig  .gitignore  ACKNOWLEDGEMENTS  DATASETS.txt  README.md  coverage.ini  mypy.ini  pyproject.toml  pytest.ini  requirements.txt
doc/: Makefile  binary.rst  common.rst  conf.py  data.rst  index.rst  models.rst  quant.rst  release_notes.rst  utils.rst
examples/cifar100/: cifar100.py  cifar100_fp.yaml  cifar100_ls1.yaml  cifar100_ls1_kd.yaml  cifar100_ls1_weight_fp_activation_kd.yaml  cifar100_ls1_weight_gf2_activation_kd.yaml  cifar100_ls1_weight_ls2_activation_kd.yaml  cifar100_ls1_weight_lsT_activation_kd.yaml
examples/imagenet/: imagenet.py  imagenet_fp.yaml  imagenet_ls1_kd.yaml  imagenet_ls1_weight_fp_activation_kd.yaml  imagenet_ls1_weight_gf2_activation_kd.yaml  imagenet_ls1_weight_ls2_activation_kd.yaml  imagenet_ls1_weight_lsT_activation_kd.yaml
examples/mnist/: mnist.py  mnist_fp.yaml  mnist_ls1.yaml  mnist_ls1_weight_fp_activation.yaml  mnist_ls1_weight_gf2_activation.yaml  mnist_ls1_weight_ls2_activation.yaml  mnist_ls1_weight_lsT_activation.yaml
quant/: __init__.py
quant/binary/: __init__.py  activation_quantization.py  binary_conv.py  optimal.py  quantization.py  ste.py  weight_quantization.py
quant/common/: __init__.py  compute_platform.py  experiment.py  initialization.py  metrics.py  parser.py  tasks.py  training.py
quant/data/: __init__.py  data_loaders.py
quant/models/: __init__.py  lenet.py  resnet.py
quant/utils/: __init__.py  checkpoints.py  kd_criterion.py  linear_lr_scheduler.py  (+3 more)
tests/: __init__.py  conftest.py
(+21 files in other folders)
